tools/data-handler/test/test-data/valid/decision-records/.cards/local/1/graphModels/.schema
[
  {
    "version": 1,
    "id": "graphModelSchema"
  }
]