tools/data-handler/test/test-data/invalid/invalid-link-type-broken-card-type-ref/.cards/local/graphViews/.schema
[
  {
    "version": 1,
    "id": "graphViewSchema"
  }
]